# ISEAFramework

./: .clang-format  CHANGELOG  CMakeLists.txt  DevelopmentTeam.md  LICENSE.MD  README.md  valgrind_suppression
.github/workflows/: build.yml
auswertung/: MakePlotsForCellData.m  PlotInit.m  PlotVideo.m  VisualizeCreatingPictures.m  VisualizeMakingMovie.m  VisualizePlayingVideos.m  main.py  save.py  vergleich.py
auswertung/paraview/: paraview.py  requestInformation.py
benchmark/: RunBenchmarksAndVisualize.sh  benchmarkBuildThermal.cpp  benchmarkSingleVisualize.py  benchmarkVisualize.py  benchmarkmaker  benchmarkmakerSingleTest.sh  benchmarkmpimaker  benchmarkmtmaker  frameworkBenchmark.cpp  frameworkBenchmark_ThEl.cpp  thermal_analytic_tests.cpp  thermal_container_benchmark.cpp
buildtest/: test_all_scenarios.sh
cmake/: FindMATIO.cmake
docs/: fork-building.md
doxygen/: Doxyfile.in  Doxyfile_release.in  automatische_vereinfachung.md  buildingUnderWindows.md  einleitung.md  mainpage.md  system.md  visualization.md  xmlcooling.md  xmlelectrical.md  xmlexecutable.md  xmlfactory.md  xmllookuptype.md  xmlobject.md  xmlobserer.md  xmloptionen.md  xmlstate.md  xmlstructure.md  xmlthermalblock.md  xmlthermalmaterial.md  xmlthermalmodel.md
doxygen/examples/: 1dlookup.xml  1dlookup_color.xml  2dlookup.xml  2dlookup_color.xml  TestShowBattery.xml  TestShowBattery_color.xml  basic_example.xml  basic_example_color.xml  capacity.xml  capacity_color.xml  cellelement.xml  cellelement_color.xml  constobj.xml  constobj_color.xml  cooling_by_constant.xml  cooling_by_constant_color.xml  cooling_dirichlet_boundary_condition.xml  cooling_dirichlet_boundary_condition_color.xml  cooling_isolation.xml  cooling_isolation_color.xml  cooling_lookuptable.xml  cooling_lookuptable_color.xml  csvfilter.xml  csvfilter_color.xml  decimatefilter.xml  decimatefilter_color.xml  factory.xml  factory_color.xml  filterChain.xml  filterChain_color.xml  matlabFilter.xml  matlabFilter_color.xml  multiobj.xml  multiobj_color.xml  ohmic.xml  ohmic_color.xml  parallel.xml  parallel_color.xml  samplerate.xml  samplerate_color.xml  (+48 more)
doxygen/scripts/: colorify.sh
licenses/: LICENSE.txt  README.md
licenses/cstring/: strlcat.txt  strlcpy.txt  strtok_r.txt
licenses/hdf5/: Copyright.html
licenses/matio/: bsd.txt
licenses/tinyxml2/: license.txt
patches/eigen/: eigen3_SparseMatrix.patch  eigen3_SparseMatrix_fork.patch
scenarios/benchmark/: parallelRC_par.xml  parallelRC_ser.xml  warburg_ser.xml  zarc_par.xml
scenarios/electrical/: Strommonster_tesla.xml  kokam_13Ah_el.xml  tesla.xml  wima_2700F_el.xml
scenarios/thermal/: testOnlyThermal.xml
scenarios/thermal_electrical/: WIMA_2700F_ThEl.xml
src/container/: armadillo_wrapper.cpp  armadillo_wrapper.h  eigen_wrapper.cpp  eigen_wrapper.h  matioWriteTree.cpp  matioWriteTree.h  matio_data.cpp  matio_data.h  matio_file.cpp  matio_file.h
src/convert/: string2lookup.cpp  string2lookup.h  string2lookup_exception.h
src/cstring/: strlcat.cpp  strlcat.h  strlcombine.cpp  strlcombine.h  strlcpy.cpp  strlcpy.h  strtok_rbsd.cpp  strtok_rbsd.h
src/electrical/: capacity.cpp  capacity.h  cellelement.cpp  cellelement.h  constantphaseelement.cpp  constantphaseelement.h  electrical_data_struct.h  electricalelement.cpp  electricalelement.h  inductance.cpp  inductance.h  ohmicresistance.cpp  ohmicresistance.h  parallelRCAlg.cpp  parallelRCAlg.h  parallelrc.cpp  parallelrc.h  paralleltwoport.cpp  paralleltwoport.h  rmphn.cpp  rmphn.h  serialtwoport.cpp  serialtwoport.h  sphericalDiffusion.cpp  sphericalDiffusion.h  twoport.cpp  twoport.h  twoport_withchild.cpp  twoport_withchild.h  voltagesource.cpp  voltagesource.h  warburgCotanh.cpp  warburgCotanh.h  warburgTanh.cpp  warburgTanh.h  zarc.cpp  zarc.h  zarcalg.cpp  zarcalg.h
src/exceptions/: CMakeLists.txt  error_function.cpp  error_function.h  error_proto.h
src/exceptions/errors/: DE.xml  EN.xml
src/export/: baseExport.h  esbVisualizer.cpp  esbVisualizer.h  spiceExport.cpp  spiceExport.h  svgExport.cpp  svgExport.h  svgLibraryInterpreter.cpp  svgLibraryInterpreter.h
src/factory/: check_positive_int.cpp  check_positive_int.h  classwrapper.h  factory.h  get_electrical_discretization.cpp  get_electrical_discretization.h
src/geometry/: angle.cpp  angle.h  area.cpp  area.h  block_geometry.cpp  block_geometry.h  cartesian.cpp  cartesian.h  cylindric.cpp  cylindric.h  geometry2D.cpp  geometry2D.h  geometry2D_Boost_geometry.h  geometry2D_Boost_polygon.h  innerArea.cpp  innerArea.h  plane.cpp  plane.h  tolerance.cpp  tolerance.h  two_dim.cpp  two_dim.h  unit_vector.cpp  unit_vector.h
src/lookup/: lookup.cpp  lookup.h  lookupException.h  lookupType.cpp  lookupType.h
src/misc/: StrCont.cpp  StrCont.h  WarningsToTestBuild.cpp_save  aligned_to_cache_line.h  boolVecOper.cpp  boolVecOper.h  cellelementCounter.h  charArrayCmp.cpp  charArrayCmp.h  cmp_str.cpp  cmp_str.h  fast_copy_matrix.cpp  fast_copy_matrix.h  get_position_in_vector.h  macros.h  mapGetSet.h  matrixInclude.cpp  matrixInclude.h  slice.h  symbolic.cpp  symbolic.h  tinydir.h  toLower.cpp  toLower.h  view.h
src/object/: const_obj.cpp  const_obj.h  function_obj1d.cpp  function_obj1d.h  lookup_obj1d.cpp  lookup_obj1d.h  lookup_obj1d_with_state.cpp  lookup_obj1d_with_state.h  lookup_obj2d.cpp  lookup_obj2d.h  lookup_obj2d_with_state.cpp  lookup_obj2d_with_state.h  multi_obj.cpp  multi_obj.h  object.cpp  object.h
src/observer/: observer.cpp  observer.h  observerException.h  thermal_observer.cpp  thermal_observer.h  twoPortObserver.cpp  twoPortObserver.h
src/operators/: vectorOperator.cpp  vectorOperator.h
src/probes/: thermal_probe.cpp  thermal_probe.h
src/states/: dgl_state.h  soc.cpp  soc.h  surface_soc.cpp  surface_soc.h  thermal_state.cpp  thermal_state.h  valueStateWrapper.cpp  (+1 more)
src/version/: CMakeLists.txt
standalone/: QuickVisualizer.cpp  dotExport.cpp  electricalSimulation.cpp  thermalSimulation.cpp  thermal_electric_simulation.cpp  verification.cpp
toolchain_files/: ToolchainWin32.cmake  ToolchainWin64.cmake
util/: build.sh  patch.sh
(+346 files in other folders)
